--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
     <title>Chio det algorithm</title>
+
+
 </head>
 <body>
-    <p>The result is</p>
+    <p>Enter the matrix with this format </p>
+    <p>[ [1,3,4,5] , [6,45,67,21] , [1,3,4,5] , [6,45,67,21] ]</p>
+    <p>every nested curly braces  represent a column</p>
+    <input type="text" id="matrix" value="[ [1,3,4,5] , [6,45,67,21] , [1,3,4,5] , [6,45,67,21] ]" style="width: 100%;height: 50px;font-size: large;: 20cm;">
+    <button type="button" style="margin-top: 10px;" id="submit">Calculate</button>
+    <p>the determinant is</p>
     <p id="result"></p>
     <script type="text/javascript" src="./chio.js"></script>
 </body>
